@@ -12,6 +12,7 @@ General
   - "DicomTlsTrustedCertificates" to provide the list of TLS certificates to be trusted by Orthanc
   - "UseDicomTls" in "DicomModalities" to enable DICOM TLS in outgoing SCU on a per-modality basis
   - "MaximumPduLength" to tune the maximum PDU length (Protocol Data Unit)
+  - "LocalAet" in "DicomModalities" to overwrite global "DicomAet" for SCU on a per-modality basis
 * New command-line option: "--openapi" to write the OpenAPI documentation of the REST API to a file
 * New metadata automatically computed at the series level: "RemoteAET"
 
